# pynam

./: .editorconfig  .flake8  .gitattributes  .gitignore  .versionrc  Jenkinsfile  README.md  do.sh  pyproject.toml
jenkins/: ci-agent-pod.yaml
pynam/: baskets.py  low_k_nam.py  sigma_nam.py
pynam/dielectric/: __init__.py  lindhard_dielectric.py  low_k_nam.py  nam_dielectric_coefficient_approximator.py  sigma_nam.py
pynam/noise/: chi.py  im_ref.py  zeta.py
pynam/util/: __init__.py  complex_integrate.py  complex_quad.py
scripts/: release.sh
scripts/standard-version/: pyproject-updater.js
tests/: test_complex_quad.py  test_low_k_nam.py  test_pynam.py  test_sigma_nam.py
tests/dielectric/: test_lindhard_dielectric.py  test_low_k_nam.py  test_nam_dielectric_coefficient_approximator.py  test_sigma_nam.py
tests/noise/: test_chi.py  test_im_ref.py  test_zeta.py
tests/util/: test_complex_integrate.py  test_complex_quad.py
