[tool.poetry]
name = "pynam"
version = "0.1.1"
description = ""
authors = ["Deepak <dmallubhotla+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
